# life-graph

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.postgres  KNOWLEDGE.md  README.md  START_HERE.md  alembic.ini  cold_start_agents.json  cold_start_flutter.json  cold_start_myapp.json  cold_start_results.json  docker-compose.production.yml  docker-compose.yml  pyproject.toml  start.ps1  status.ps1  stop.ps1  uv.err  uvicorn_out.txt
.claude/: launch.json
.comms/: README.md
.comms/active/: .gitkeep.md
.comms/context/: shared-knowledge.md  strategic-decision.md  uzhavu-audit.md
.comms/inbox/: 2026-07-05-001-product-factory.md  2026-07-05-002-ai-engine-p0.md  2026-07-05-003-devtools-modules.md  2026-07-05-004-whatsapp-razorpay.md  2026-07-05-005-pwa-nlq.md  2026-07-05-006-template-gallery.md  2026-07-05-007-ai-engineering.md
.comms/outbox/: .gitkeep.md  2026-07-05-001-product-factory-done.md  2026-07-05-002-ai-engine-gaps.md  2026-07-05-002-ai-engine-p0-done.md  2026-07-05-004-integrations-done.md  2026-07-05-005-pwa-nlq-done.md  2026-07-05-006-template-gallery-done.md  2026-07-05-007-ai-engineering-done.md  2026-07-06-phase0-tools-stack-done.md
.comms/specs/: agent-engineering-handbook.md  agent-system-spec.md  ai-engineering-tools.md  devops-infrastructure.md  eval-harness.md  llm-trace-viewer.md  personal-ai-platform.md  personal-tools.md  platform-extensions.md  product-factory-implementation.md  pwa-mobile.md  (+3 more)
alembic/: env.py
dashboard/: .env.example  Dockerfile  docker-compose.yml  middleware.ts  next.config.ts  nginx.conf  package-lock.json  package.json  proxy.ts
docs/: ARCHITECTURE.md  FEATURES.md  OPERATIONS.md  QUICKSTART.md  ai-engine-improvements.md  devtools-modules-spec.md
life_graph/: __init__.py  cli.py  config.py  main.py  mcp_server.py
nginx/: nginx.conf
plugins/: README.md
scripts/: backup.sh  backup_cron.sh  debug_age.py  debug_graphstore.py  deploy.sh  entrypoint.sh  init_db.sql  restore.sh  run_graph_migration.py  smoke_test.py  test_age.sql  test_api.py  test_features.py  test_sdk.py  verify_embeddings.py  verify_restore.sh
sdks/python/: README.md  pyproject.toml
sdks/python/life_graph_sdk/: __init__.py  async_client.py  client.py  errors.py  types.py
tests/: conftest.py  test_integration.py
(+430 files in other folders)
