[project]
name = "life-graph"
version = "0.1.0"
description = "Brain-inspired personal memory system with proactive recall"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "racer"}]

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",

    # NLP & ML (local, no API cost)
    "spacy>=3.7",
    "sentence-transformers>=3.0",

    # LLM (routing only, minimal usage)
    "litellm>=1.40",

    # Cold Start
    "pydriller>=2.6",
    "pyyaml>=6.0",
    "radon>=6.0",

    # Utilities
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "orjson>=3.10",

    # Object Storage
    "minio>=7.2",
]

[project.optional-dependencies]
multimodal = [
    "faster-whisper>=1.0",
    "pytesseract>=0.3",
    "pymupdf>=1.24",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.7",
]

[project.scripts]
life-graph = "life_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["life_graph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
