[project]
name = "life-graph-sdk"
version = "0.1.0"
description = "Python SDK for the Life Graph memory system"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
async = ["httpx[http2]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
